--- a/login_en.html
+++ b/login_en.html
@@ -36,7 +36,7 @@
                 <button type="submit">Login</button></a>
             </div>
             <div class="links">
-                <a href="registrieren_en.html">Create a new Account</a>
+                <a href="registrieren_en.html">Create a new account</a>
             </div>
 
         </form>
